@@ -1,5 +1,10 @@
 2002-09-19  Christian Meyer  <chrisime@gnome.org>
 
+	* db/online/suchen.php: Show message when a search string wasn't found
+	in the database.
+
+2002-09-19  Christian Meyer  <chrisime@gnome.org>
+
 	* db/online/erweitern.php: Improved it just a bit.
 
 2002-09-19  Sven Herzberg <herzi@gnome-de.org>
